# ros_phoenix

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  road_map.txt  ros_phoenix_hardware.xml
cfg/: Talon.cfg
include/motor_control/: TalonNode.h
include/ros_phoenix/: FakeTalonNode.h  TalonNode.h  base_component.cpp  base_component.hpp  base_node.hpp  falcon_component.hpp  phoenix_bridge.hpp  phoenix_components.hpp  phoenix_manager.hpp  phoenix_node.hpp  phoenix_nodes.hpp  phoenix_system.hpp  talon_component.hpp  victor_component.hpp
launch/: 2021.launch  2021.yaml  arm_test.launch  arm_test.yaml  arm_test_sim.yaml  box_testing.launch  box_testing.yaml  demo-components.launch.py  demo-nodes.launch.py  demo.launch.py  deposition.launch  deposition.yaml  example.launch  example.yaml  fake_arm_test.launch  frame_auton.launch  frame_teleop.launch  full_system.yaml  testTalon.launch.py  test_frame.launch  test_frame.yaml
msg/: ArmVelocities.msg  MotorControl.msg  TalonStatus.msg
ros2_control/: phoenix_bridge_example.ros2_control.xacro  phoenix_system_example.ros2_control.xacro
scripts/: box_testing.py
src/: ArmCommand.cpp  CmdExmaple.cpp  DepositionCommand.cpp  FDTeleop.cpp  FakeMotorControl.cpp  FakeTalonNode.cpp  MotorControl.cpp  TalonNode.cpp  base_node.cpp  falcon_component.cpp  falcon_node.cpp  phoenix_bridge.cpp  phoenix_components.cpp  phoenix_container.cpp  phoenix_manager.cpp  phoenix_nodes.cpp  phoenix_system.cpp  potentiometers.py  talon_component.cpp  talon_node.cpp  test.cpp  victor_component.cpp  victor_node.cpp
