<?xml version="1.0"?>
<package format="2">

    <!-- basic data -->
    <name>ros_phoenix</name>
    <version>1.0.0</version>
    <description>ROS Support for CTRE Phoenix Library</description>

    <!-- maintainers -->
    <maintainer email="vanderbiltrobotics@gmail.com">Vanderbilt Robotics</maintainer>

    <!-- license information -->
    <license>MIT</license>

    <!-- urls -->
    <url type="website">https://github.com/vanderbiltrobotics/</url>

    <!-- dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>roslaunch</depend>

    <!-- build messages -->
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
